--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "main": "./lib/semanticolor",
   "version": "0.1.0",
   "description": "Provide semantic coloring for Atom. Define what is colorized. Up to 180 color combinations based off your Theme/Style. Every variable, function, class name, constant has a consistent color across all of your source.",
-  "keywords": [],
-  "repository": "https://github.com/atom/semanticolor",
+  "keywords": ["semantic", "highlight", "color", "colorcoder", "coding with
+    colors", "dyslexic","dysgraphic"],
+  "repository": "https://github.com/xcezzz/semanticolor",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
