--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "repository": "https://github.com/xcezzz/semanticolor",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.13.0 <2.0.0"
+    "atom": ">=1.0.0 <2.0.0"
   },
   "styleSheets": [
     "semanticolor.atom-text-editor.less"
@@ -25,6 +25,7 @@
     "debug": "^2.4.5",
     "lodash": "^4.13.1",
     "murmurhash3js": "^3.0.1",
+    "semver": "^5.3.0",
     "sugar": "^2.0.0"
   },
   "devDependencies": {
